add new aggregation processing